load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "uniffi-bindgen",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    # Use the isolated crate index (see MODULE.bazel) so mail-side uniffi pins
    # cannot enable cargo-metadata via workspace feature unification.
    deps = ["@uniffi_bindgen_index//:uniffi"],
)
