[workspace]
resolver = "2"

members = [
  "calendar/calendar-api",
  "calendar/calendar-common",
  "core/action-queue",
  "core/core-api",
  "core/core-common",
  "core/core-test-utils",
  "core/event-loop",
  "core/ical",
  "core/proton-canonical-email",
  "core/sqlite3",
  "core/stash",
  "core/stash-macros",
  "core/task-service",
  "core/vcard",
  "crypto/crypto-calendar",
  "crypto/crypto-inbox",
  "crypto/crypto-inbox-mime",
  "crypto/crypto-notifications",
  "crypto/crypto-pin-hash",
  "mail/mail-api",
  "mail/mail-common",
  "mail/mail-html-transformer",
  "mail/mail-ids",
  "mail/mail-test-utils",
  "mail/mail-tui",
  "mail/mail-uniffi",
  "mail/mail-wasm",
  "mail/uniffi-bindgen",
  "mail/uniffi-macros",
  "payment/payment-sdk",
  "payment/payment-uniffi",
  "payment/payment-crux",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["zeroize", "std"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
argon2 = "0.5.3"
bitflags = { version = "2.8.0" }
bytes = "1.9"
cfg-if = "1"
chrono = { version = "0.4", features = ["default", "serde"] }
clap = { version = "4.5.27", features = ["derive"] }
color-backtrace = "0.6.1"
common-multipart-rfc7578 = { version = "0.7.0", default-features = false }
cookie = "0.18.1"
criterion = "0.5.1"
ctor = "0.2.9"
derivative = "2.2.0"
non-empty-string = { version = "0.2.5", features = ["serde"] }
derive_more = { version = "2.0", features = ["full"] }
email_address = { version = "0.2.9", features = ["serde"] }
ext-php-rs = "0.13.1"
flume = "0.11"
futures = "0.3.31"
function_name = "0.3.0"
futures-util = "0.3.31"
hex = "0.4.3"
ical = { version = "0.11", features = ["generator"] }
include_dir = { version = "0.7", features = ["glob"] }
indoc = "2.0.5"
insta = { version = "1.42.0", features = ["toml"] }
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.13.0"
html2text = "0.14.2"
jiff = "0.2.4"
file-format = { version = "0.26.0", features = ["reader"] }
lazy_static = "1"
mime = "0.3.17"
mockall = "0.12"
num_enum = "0.7.3"
oxilangtag = "0.1"
parking_lot = "0.12.3"
paste = "1"
pin-project = "1"
pretty_assertions = "1.4.1"
rand = "0.8"
regex = "1.11.1"
rmp = "0.8"
rmp-serde = "1.3"
rusqlite = { version = "0.32.1", features = [
  "bundled",
  "chrono",
  "functions",
  "trace",
  "uuid",
] }
sqlite-watcher = { version = "0.5.1", features = ["rusqlite"] }
slotmap = "1.0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1.0.137"
serde_repr = "0.1"
serde_with = "3.12.0"
serde_qs = "0.13.0"
smart-default = "0.7.1"
strum = "0.26.3"
tempdir = "0.3.7"
tempfile = "3.15.0"
test-case = "3.3.1"
thiserror = "1.0.69"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tynm = "0.1"
typed-builder = "0.20.0"
unicode-segmentation = "1.12.0"
uniffi = { version = "0.29.1", features = ["tokio"] }
url = { version = "2.5.4", features = ["serde"] }
utf8-width = "0.1.7"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
velcro = "0.5.4"
walkdir = "2.5.0"
wiremock = "0.6.2"
wiremock-multipart = "1.0.1"
zeroize = "1.8.1"

[workspace.dependencies.proton-action-queue]
version = "0.7"
path = "core/action-queue"
registry = "proton"

[workspace.dependencies.proton-core-api]
version = "0.8"
path = "core/core-api"
registry = "proton"

[workspace.dependencies.proton-core-common]
version = "0.9"
path = "core/core-common"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-event-loop]
version = "0.7"
path = "core/event-loop"
registry = "proton"

[workspace.dependencies.proton-sqlite3]
version = "0.7"
path = "core/sqlite3"
registry = "proton"

[workspace.dependencies.proton-canonical-email]
version = "0.1"
path = "core/proton-canonical-email"
registry = "proton"

[workspace.dependencies.proton-ical]
path = "core/ical"

[workspace.dependencies.proton-vcard]
version = "0.2"
path = "core/vcard"
registry = "proton"

[workspace.dependencies.stash]
version = "0.2"
path = "core/stash"
registry = "proton"

[workspace.dependencies.stash-macros]
version = "0.2"
path = "core/stash-macros"
registry = "proton"

[workspace.dependencies.proton-mail-api]
version = "0.5"
path = "mail/mail-api"
registry = "proton"

[workspace.dependencies.proton-mail-ids]
version = "0.1"
path = "mail/mail-ids"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-mail-common]
version = "0.8"
path = "mail/mail-common"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-uniffi-macros]
version = "0.1"
path = "mail/uniffi-macros"
registry = "proton"

[workspace.dependencies.proton-crypto-inbox]
version = "0.9.0"
path = "crypto/crypto-inbox"
registry = "proton"

[workspace.dependencies.proton-crypto-inbox-mime]
version = "0.4.1"
path = "crypto/crypto-inbox-mime"
registry = "proton"

[workspace.dependencies.proton-crypto-account]
version = "0.10.1"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-crypto]
version = "0.4.15"
registry = "proton"

[workspace.dependencies.proton-crypto-notifications]
version = "0.1"
path = "crypto/crypto-notifications"
registry = "proton"

[workspace.dependencies.proton-crypto-pin-hash]
version = "0.1"
path = "crypto/crypto-pin-hash"
registry = "proton"

[workspace.dependencies.muon]
git = "https://gitlab.protontech.ch/jhoulahan/muon.git"
rev = "e8ce5fd6400bd47de27c03a32cc6689377bc2096"
features = ["unsealed"]

[workspace.dependencies.proton-core-test-utils]
version = "0.1"
path = "core/core-test-utils"
registry = "proton"

[workspace.dependencies.proton-mail-test-utils]
version = "0.1"
path = "mail/mail-test-utils"
registry = "proton"

[workspace.dependencies.proton-task-service]
version = "0.1"
path = "core/task-service"
registry = "proton"

[workspace.dependencies.proton-payment-sdk]
version = "0.1.0"
path = "payment/payment-sdk"
registry = "proton"

[workspace.dependencies.proton-calendar-api]
version = "0.1"
path = "calendar/calendar-api"
registry = "proton"

[workspace.dependencies.proton-calendar-common]
version = "0.1"
path = "calendar/calendar-common"
registry = "proton"

[workspace.dependencies.proton-crypto-calendar]
version = "0.1"
path = "crypto/crypto-calendar"
registry = "proton"

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# Useful to track missing comments on private items/code.
# missing_docs_in_private_items = "warn"
mut_mut = "warn"
#Disallow `println!`. Use `debug!` for debug output
# (which is provided by the `tracing` crate).
print_stdout = "warn"
unseparated_literal_suffix = "warn"
wrong_self_convention = "warn"
#TODO: Cargo build override rather than profile config(https://users.rust-lang.org/t/how-to-modify-profile-release-only-for-a-target/48811/3)

[profile.bench]
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
panic = "unwind"

# This profile gets about a 50% reduction in size compared to the default release profile.
[profile.small]
inherits = "release"
opt-level = "s"      # We might want to experiment with "z" instead.
# Move the debug info to a separate file.
# At the time of writing, this reduces the size of the binary by 9MB.
split-debuginfo = "packed"
lto = true                 # "Fat" LTO
# panic = 'abort' We might want to enable this

[patch."crates-io"]
# TODO https://github.com/hyperium/hyper/pull/3887
# TODO https://protonmail.slack.com/archives/C07FCLA1RQW/p1746692300139499
hyper = { git = "https://github.com/Patryk27/hyper", rev = "f1ee16c0e1ef72c5f467fdf142e6525ffa03059a" }
