[workspace]
resolver = "2"

members = [
  "account/account-api",
  "account/account-common",
  "account/account-uniffi",
  "calendar/calendar-api",
  "calendar/calendar-common",
  "shared/action-queue",
  "core/core-api",
  "core/core-common",
  "core/event-loop",
  "shared/ical",
  "shared/ical-cli",
  "shared/ical-fuzz",
  "shared/ical-tz",
  "shared/log-service",
  "shared/proton-canonical-email",
  "shared/sqlite3",
  "shared/stash",
  "shared/stash-macros",
  "shared/task-service",
  "shared/vcard",
  "crypto/crypto-calendar",
  "crypto/crypto-inbox",
  "crypto/crypto-inbox-mime",
  "crypto/crypto-notifications",
  "crypto/crypto-pin-hash",
  "mail/mail-api",
  "mail/mail-common",
  "mail/mail-common-derive",
  "mail/mail-html-transformer",
  "mail/mail-tui",
  "mail/mail-uniffi",
  "payment/payment-crux",
  "payment/payment-sdk",
  "payment/payment-uniffi",
  "uniffi/uniffi-bindgen",
  "uniffi/uniffi-common",
  "uniffi/uniffi-macros",
  "uniffi/uniffi-runtime",
  "shared/proton-event-service",
  "shared/proton-network-monitor-service",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["zeroize", "std"] }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
argon2 = { version = "0.5.3", features = ["default", "std"] }
bitflags = { version = "2.8.0" }
bytes = "1.9"
cfg-if = "1"
chrono = { version = "0.4", features = ["default", "serde"] }
clap = { version = "4.5.27", features = ["derive"] }
color-backtrace = "0.6.1"
common-multipart-rfc7578 = { version = "0.7.0", default-features = false }
cookie = "0.18.1"
criterion = "0.5.1"
derivative = "2.2.0"
non-empty-string = { version = "0.2.5", features = ["serde"] }
derive_more = { version = "2.0", features = ["full"] }
ext-php-rs = "0.13.1"
fancy-regex = "0.14.0"
fallible-iterator = "0.3"
flume = "0.11"
futures = "0.3.31"
function_name = "0.3.0"
futures-util = "0.3.31"
hex = "0.4.3"
ical = { version = "0.11", features = ["generator"] }
include_dir = { version = "0.7", features = ["glob"] }
indoc = "2.0.5"
insta = { version = "1.42.0", features = ["toml"] }
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.13.0"
html2text = "0.14.2"
jiff = { version = "0.2.4", features = ["serde"] }
file-format = { version = "0.26.0", features = ["reader"] }
mime = "0.3.17"
parking_lot = "0.12.3"
paste = "1"
pin-project = "1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
rand = "0.8"
regex = "1.11.1"
rmp = "0.8"
rmp-serde = "1.3"
rusqlite = { version = "0.32.1", features = [
  "bundled",
  "chrono",
  "functions",
  "trace",
  "uuid",
] }
sqlite-watcher = { version = "0.5.1", features = ["rusqlite"] }
slotmap = "1.0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1.0.137"
serde_repr = "0.1"
serde_with = "3.12.0"
serde_qs = "0.13.0"
sha2 = "0.10.9"
smart-default = "0.7.1"
strum = "0.26.3"
tempdir = "0.3.7"
tempfile = "3.15.0"
test-case = "3.3.1"
thiserror = "1.0.69"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tynm = "0.1"
typed-builder = "0.20.0"
unicode-segmentation = "1.12.0"
uniffi_bindgen = "0.29"
uniffi_meta = "0.29"
uniffi = { version = "0.29.1", features = ["tokio"] }
url = { version = "2.5.4", features = ["serde"] }
utf8-width = "0.1.7"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
velcro = "0.5.4"
walkdir = "2.5.0"
wiremock = "0.6.2"
wiremock-multipart = "1.0.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
libfuzzer-sys = "0.4"
mockall = "0.13.1"
quick-xml = "0.38.2"
reqwest = { version = "0.12.23", features = [
  "rustls-tls",
], default-features = false }

[workspace.dependencies.email_address]
version = "0.2.9"
features = ["serde"]
git = "https://github.com/LBeernaertProton/rust-email_address.git"
branch = "feat/allow-long-local-parts"

[workspace.dependencies.proton-account-api]
version = "0.1"
path = "account/account-api"
registry = "proton"

[workspace.dependencies.proton-account-common]
version = "0.1"
path = "account/account-common"
registry = "proton"

[workspace.dependencies.proton-account-uniffi]
path = "account/account-uniffi"
registry = "proton"

[workspace.dependencies.proton-action-queue]
version = "0.7"
path = "shared/action-queue"
registry = "proton"

[workspace.dependencies.proton-core-api]
version = "0.8"
path = "core/core-api"
registry = "proton"

[workspace.dependencies.proton-core-common]
version = "0.9"
path = "core/core-common"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-event-loop]
version = "0.7"
path = "core/event-loop"
registry = "proton"

[workspace.dependencies.proton-sqlite3]
version = "0.7"
path = "shared/sqlite3"
registry = "proton"

[workspace.dependencies.proton-canonical-email]
version = "0.1"
path = "shared/proton-canonical-email"
registry = "proton"

[workspace.dependencies.proton-ical]
path = "shared/ical"

[workspace.dependencies.proton-ical-cli]
path = "shared/ical-cli"

[workspace.dependencies.proton-ical-tz]
path = "shared/ical-tz"

[workspace.dependencies.proton-vcard]
version = "0.2"
path = "shared/vcard"
registry = "proton"

[workspace.dependencies.stash]
version = "0.2"
path = "shared/stash"
registry = "proton"

[workspace.dependencies.stash-macros]
version = "0.2"
path = "shared/stash-macros"
registry = "proton"

[workspace.dependencies.proton-mail-api]
version = "0.5"
path = "mail/mail-api"
registry = "proton"

[workspace.dependencies.proton-mail-common]
version = "0.8"
path = "mail/mail-common"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-mail-common-derive]
version = "0.1"
path = "mail/mail-common-derive"

[workspace.dependencies.proton-mail-uniffi]
path = "mail/mail-uniffi"
registry = "proton"

[workspace.dependencies.uniffi-macros]
path = "uniffi/uniffi-macros"

[workspace.dependencies.uniffi-runtime]
path = "uniffi/uniffi-runtime"

[workspace.dependencies.uniffi-common]
path = "uniffi/uniffi-common"

[workspace.dependencies.proton-crypto-inbox]
version = "0.9.0"
path = "crypto/crypto-inbox"
registry = "proton"

[workspace.dependencies.proton-crypto-inbox-mime]
version = "0.4.1"
path = "crypto/crypto-inbox-mime"
registry = "proton"

[workspace.dependencies.proton-crypto-account]
version = "0.12.1"
registry = "proton"
features = ["sql"]

[workspace.dependencies.proton-crypto-subtle]
version = "0.1.0"
registry = "proton"
features = ["legacy"]


[workspace.dependencies.proton-crypto]
version = "0.6.0"
registry = "proton"

[workspace.dependencies.proton-crypto-notifications]
version = "0.1"
path = "crypto/crypto-notifications"
registry = "proton"

[workspace.dependencies.proton-crypto-pin-hash]
version = "0.1"
path = "crypto/crypto-pin-hash"
registry = "proton"

[workspace.dependencies.muon]
git = "https://gitlab.protontech.ch/jhoulahan/muon.git"
rev = "12c57e6e79c023e5d14e75d6318a878491835c3d"
features = ["unsealed"]

[workspace.dependencies.proton-log-service]
path = "shared/log-service"
version = "0.1"
registry = "proton"

[workspace.dependencies.proton-task-service]
version = "0.1"
path = "shared/task-service"
registry = "proton"

[workspace.dependencies.proton-payment-sdk]
version = "0.1.0"
path = "payment/payment-sdk"
registry = "proton"

[workspace.dependencies.proton-calendar-api]
version = "0.1"
path = "calendar/calendar-api"
registry = "proton"

[workspace.dependencies.proton-calendar-common]
version = "0.1"
path = "calendar/calendar-common"
registry = "proton"

[workspace.dependencies.proton-crypto-calendar]
version = "0.1"
path = "crypto/crypto-calendar"
registry = "proton"

[workspace.dependencies.proton-mail-html-transformer]
version = "0.2"
path = "mail/mail-html-transformer"
registry = "proton"

[workspace.dependencies.proton-event-service]
version = "0.1.0"
path = "shared/proton-event-service"
registry = "proton"

[workspace.dependencies.proton-network-monitor-service]
version = "0.1.0"
path = "shared/proton-network-monitor-service"
registry = "proton"

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
trivial_casts = "warn"
unused_qualifications = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# Useful to track missing comments on private items/code.
# missing_docs_in_private_items = "warn"
mut_mut = "warn"
#Disallow `println!`. Use `debug!` for debug output
# (which is provided by the `tracing` crate).
print_stdout = "warn"
unseparated_literal_suffix = "warn"
wrong_self_convention = "warn"
missing_panics_doc = "allow"
#TODO: Cargo build override rather than profile config(https://users.rust-lang.org/t/how-to-modify-profile-release-only-for-a-target/48811/3)

[profile.bench]
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
panic = "unwind"

# This profile gets about a 50% reduction in size compared to the default release profile.
[profile.small]
inherits = "release"
opt-level = "s"      # We might want to experiment with "z" instead.
# Move the debug info to a separate file.
# At the time of writing, this reduces the size of the binary by 9MB.
split-debuginfo = "packed"
lto = true                 # "Fat" LTO
incremental = false
# panic = 'abort' We might want to enable this

[patch."crates-io"]
# TODO https://github.com/hyperium/hyper/pull/3887 (got merged, waiting for release)
# TODO https://protonmail.slack.com/archives/C07FCLA1RQW/p1746692300139499
hyper = { git = "https://github.com/hyperium/hyper", rev = "436cadd1ac08a9508a46f550e03281db9f2fee97" }

# TODO(wpolak) Introduce a proper PR to the upstream with all the changes.
# * -webkit-text-fill-color support
# * parsing HEX colors without leading `#`
# * `Debug`, `Clone` and `Copy` for `PrinterOptions`
lightningcss = { git = "https://github.com/frondeus/lightningcss", rev = "b9dc136b0b43220381965e5806903e7c31a3ca12" }
